--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -84,7 +84,7 @@ body {
 }
 
 body {
-    font-family: "Lato";
+    font-family: "Exo 2";
     font-weight: 300;
     font-size: 16px;
     color: #555;
@@ -159,7 +159,7 @@ a img {
 
 /* Titles */
 h1, h2, h3, h4, h5, h6 {
-    font-family: "Raleway";
+    font-family: "Exo 2";
     font-weight: 300;
     color: #333;
 }
@@ -487,7 +487,7 @@ a:after {
 }
 
 .service-active p {
-	font-family: 'Lato', sans-serif;
+	font-family: 'Exo 2', sans-serif;
 	padding-top: 10px;
 }
 
